# uni-hw

./: 00-name.cpp  01-arithmetic.cpp  02-equation.cpp  03-another-equation.cpp  04-lamp-lazy.cpp  04-lamp-simplified.cpp  04-lamp.cpp  05-cone.cpp  06-branch.cpp  07-function.cpp  08-order.cpp  09-tabulating.cpp  CMakeLists.txt
