cmake_minimum_required(VERSION 3.25)
project(uni_hw)

set(CMAKE_CXX_STANDARD 14)

add_executable(00-name 00-name.cpp)
add_executable(01-arithmetic 01-arithmetic.cpp)
add_executable(02-equation 02-equation.cpp)
add_executable(03-another-equation 03-another-equation.cpp)
add_executable(04-lamp 04-lamp.cpp)
add_executable(04-lamp-simplified 04-lamp-simplified.cpp)
add_executable(05-cone 05-cone.cpp)
add_executable(06-branch 06-branch.cpp)
add_executable(07-function 07-function.cpp)
